simple form refactored

--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -1,9 +1,6 @@
 <h1>Edit this pet </h1>
-<%= simple_form_for(@pet) do |f| %>
-  <%= f.input :name %>
-  <%= f.input :address %>
-  <%= f.input :species %>
-  <%= f.submit %>
-<% end %>
+
+<%= render 'form', pet: @pet, btn_label: 'Update', btn_class: 'btn-warning' %>
+
 
 <%= link_to'Cancel', pet_path(@pet) %>
