--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,10 +1,5 @@
 <h1>Add Lost Pet</h1>
 
-<%= simple_form_for(@pet) do |f| %>
-  <%= f.input :name %>
-  <%= f.input :address %>
-  <%= f.input :species, collection: Pet::SPECIES %>
-  <%= f.button :submit, 'Report', class: 'btn-primary' %>
-<% end %>
+<%= render 'form', pet: @pet, btn_label: 'Report', btn_class: 'btn-primary' %>
 
 <%= link_to'Cancel', pets_path %>
